// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ToggleSwitch Snapshot Tests should match snapshot - disabled 1`] = `
<button
  aria-pressed="false"
  class="relative inline-flex h-6 w-11 items-center rounded-full transition-colors cursor-pointer bg-gray-200 dark:bg-gray-600"
  type="button"
>
  <span
    class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-1"
  />
</button>
`;

exports[`ToggleSwitch Snapshot Tests should match snapshot - disabled state 1`] = `
<button
  aria-pressed="false"
  class="relative inline-flex h-6 w-11 items-center rounded-full transition-colors opacity-50 cursor-not-allowed bg-gray-200 dark:bg-gray-600"
  disabled=""
  type="button"
>
  <span
    class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-1"
  />
</button>
`;

exports[`ToggleSwitch Snapshot Tests should match snapshot - enabled 1`] = `
<button
  aria-pressed="true"
  class="relative inline-flex h-6 w-11 items-center rounded-full transition-colors cursor-pointer bg-blue-600"
  type="button"
>
  <span
    class="inline-block h-4 w-4 transform rounded-full bg-white transition-transform translate-x-6"
  />
</button>
`;

exports[`ToggleSwitch Snapshot Tests should match snapshot - with label and description 1`] = `
<div
  class="flex items-start justify-between"
>
  <div
    class="flex-1"
  >
    <label
      class="block text-sm font-medium text-gray-900 dark:text-white"
      for="toggle-notifications"
    >
      Notifications
    </label>
    <p
      class="text-sm text-gray-500 dark:text-gray-400 mt-0.5"
    >
      Receive notifications
    </p>
  </div>
  <button
    aria-labelledby="toggle-notifications-label"
    aria-pressed="true"
    class="relative inline-flex h-7 w-14 items-center rounded-full transition-colors cursor-pointer bg-blue-600"
    id="toggle-notifications"
    type="button"
  >
    <span
      class="inline-block h-5 w-5 transform rounded-full bg-white transition-transform translate-x-8"
    />
  </button>
</div>
`;
